--- a/index.html
+++ b/index.html
@@ -1,15 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>My JavaScript App</title>
-</head>
-<body>
-  <h1>My JavaScript App</h1>
-  <p>This app was compiled using the Babel Webpack Starter Pack which can compile ES2015, ES2016 and ES2017 code including Async/Await</p>
-  
-  <script src="build/app.bundle.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Dosis"
+      rel="stylesheet"
+    />
+    <!-- <link rel="stylesheet" href="css/main.css" /> -->
+    <title>My JavaScript App</title>
+  </head>
+  <body>
+    <nav class="navbar navbar-dark bg-primary mb-3">
+      <div class="container">
+        <a href="#" class="navbar-brand">Portfolio Comments</a>
+      </div>
+    </nav>
+
+    <div class="container postsContainer">
+      <div class="card card-body card-form">
+        <h1>Say Something</h1>
+        <p class="lead">What did you think?</p>
+        <div class="form-group">
+          <input
+            type="text"
+            id="title"
+            class="form-control"
+            placeholder="Comment Title"
+          />
+        </div>
+        <div class="form-group">
+          <textarea
+            id="body"
+            class="form-control"
+            placeholder="Comment Body"
+          ></textarea>
+        </div>
+        <input type="hidden" id="id" value="" />
+        <button class="post-submit btn btn-primary btn-block">Post</button>
+        <span class="form-end"></span>
+      </div>
+      <br />
+      <div id="post"></div>
+    </div>
+
+    <footer class="mt-5 p-3 text-center bg-light">
+      Nathaniel Liebhart | &copy;
+    </footer>
+
+    <script src="build/app.bundle.js"></script>
+  </body>
 </html>
