--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       href="https://fonts.googleapis.com/css?family=Dosis"
       rel="stylesheet"
     />
-    <!-- <link rel="stylesheet" href="css/main.css" /> -->
+    <link rel="stylesheet" href="assets/css/main.css" />
     <title>My JavaScript App</title>
   </head>
   <body>
@@ -30,7 +30,7 @@
       </div>
     </nav>
 
-    <div class="container postsContainer">
+    <div class="container commentsContainer">
       <div class="card card-body card-form">
         <h1>Say Something</h1>
         <p class="lead">What did you think?</p>
@@ -50,11 +50,11 @@
           ></textarea>
         </div>
         <input type="hidden" id="id" value="" />
-        <button class="post-submit btn btn-primary btn-block">Post</button>
+        <button class="comment-submit btn btn-primary btn-block">Post</button>
         <span class="form-end"></span>
       </div>
       <br />
-      <div id="post"></div>
+      <div id="comments"></div>
     </div>
 
     <footer class="mt-5 p-3 text-center bg-light">
